# Learning_CMake

10_types/: CMakeLists.txt  foo.cpp
11_lists/: CMakeLists.txt
12_listtrick/: CMakeLists.txt
13_cache_scope/: CMakeLists.txt
13_cache_scope/boo/: CMakeLists.txt
14_separate/: CMakeLists.txt  manhattan.cmake  paris.cmake
15_cache_type/: CMakeLists.txt
16_gui/: CMakeLists.txt
17_use_case/: CMakeLists.txt
18_bool/: CMakeLists.txt
19_unset/: CMakeLists.txt
1_cache_regular/: CMakeLists.txt
20_recomendation/: CMakeLists.txt
20_recomendation/boo/: CMakeLists.txt
20_recomendation/foo/: CMakeLists.txt
2_scope/: CMakeLists.txt
2_scope/boo/: CMakeLists.txt
3_new_scope/: CMakeLists.txt
4_same_scope/: CMakeLists.txt  modify-un.cmake
5_parent_scope/: CMakeLists.txt
6_cache_plus/: CMakeLists.txt
7_confusing/: CMakeLists.txt
8_names/: CMakeLists.txt
9_deref/: CMakeLists.txt
